--- a/symfony_project/templates/login/index.html.twig
+++ b/symfony_project/templates/login/index.html.twig
@@ -8,16 +8,16 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path('login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}"/>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password"/>
-
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"/> #}
-
-        <button type="submit">login</button>
+    <form action="{{ path('login') }}" method="post" class="mx-auto" style="width: 500px; margin-top: 200px">
+    <div class="form-group">
+        <label for="username">Username : </label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" placeholder="Enter username">
+    </div>
+    <div class="form-group">
+        <label for="password">Password : </label>
+        <input type="password" id="password" name="_password" class="form-control" placeholder="Enter password">
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
     </form>
+
 {% endblock %}
