--- a/symfony_project/templates/login/index.html.twig
+++ b/symfony_project/templates/login/index.html.twig
@@ -1,7 +1,6 @@
-{# templates/login/index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{# ... #}
+{% block title %}Login{% endblock %}
 
 {% block body %}
     {% if error %}
