--- a/symfony_project/templates/registration/register.html.twig
+++ b/symfony_project/templates/registration/register.html.twig
@@ -1,16 +1,28 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+    <div class="mx-auto" style="width: 500px; margin-top: 200px"> 
+        <h3>Register</h3>
+        <br>
+        {{ form_start(registrationForm) }}
+            <div class="form-group"> 
+                    {{ form_row(registrationForm.username, {
+                    label: 'Username : ', 
+                    'attr': {'class': 'form-control'}},
+                    ) }}
+            </div>
+            <div class="form-group"> 
+                    {{ form_row(registrationForm.plainPassword, {
+                    label: 'Password : ', 
+                    'attr': {'class': 'form-control'}},
+                    ) }}
+            </div>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+            <button type="submit" class="btn btn-primary">Register</button>
+        {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
