--- a/symfony_project/templates/base.html.twig
+++ b/symfony_project/templates/base.html.twig
@@ -16,6 +16,30 @@
         {% endblock %}
     </head>
     <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Note Taker</a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            
+        </li>
+        <li class="nav-item">
+            
+        </li>
+        <li class="nav-item dropdown">
+            
+        </li>
+        <li class="nav-item">
+            
+        </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+        
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Logout</button>
+        </form>
+    </div>
+    </nav>
         <div class="container">
             {% block body %}{% endblock %}
         </div>
