make logout invisible when not logged in

--- a/symfony_project/templates/base.html.twig
+++ b/symfony_project/templates/base.html.twig
@@ -16,6 +16,7 @@
         {% endblock %}
     </head>
     <body>
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Note Taker</a>
 
@@ -35,11 +36,13 @@
         </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-        
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Logout</button>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <a nav="nav-link btn" href={{ path('logout')}} >Logout</a>
+        {% endif %}
         </form>
     </div>
     </nav>
+    
         <div class="container">
             {% block body %}{% endblock %}
         </div>
