--- a/symfony_project/templates/base.html.twig
+++ b/symfony_project/templates/base.html.twig
@@ -21,23 +21,13 @@
     <a class="navbar-brand" href="#">Note Taker</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            
-        </li>
-        <li class="nav-item">
-            
-        </li>
-        <li class="nav-item dropdown">
-            
-        </li>
-        <li class="nav-item">
-            
-        </li>
+        <ul class="navbar-nav mr-auto ">
         </ul>
-        <form class="form-inline my-2 my-lg-0">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        <a nav="nav-link btn" href={{ path('logout')}} >Logout</a>
+        <a nav="nav-link " href={{ path('logout')}} >Logout</a>
+        {% else %}
+        <a nav="nav-link " href={{ path('app_register')}} style="margin-right : 2%">Register</a>
+        <a nav="nav-link " href={{ path('login')}}>Login</a>
         {% endif %}
         </form>
     </div>
