--- a/symfony_project/templates/modules/index.html.twig
+++ b/symfony_project/templates/modules/index.html.twig
@@ -3,33 +3,27 @@
 {% block title %}Modules index{% endblock %}
 
 {% block body %}
-    <h1>Modules index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for module in modules %}
-            <tr>
-                <td>{{ module.id }}</td>
-                <td>{{ module.name }}</td>
-                <td>
-                    <a href="{{ path('app_modules_show', {'id': module.id}) }}">show</a>
-                    <a href="{{ path('app_modules_edit', {'id': module.id}) }}">edit</a>
-                </td>
-            </tr>
+    <br>
+    <h1>Your modules :</h1>
+    <br>
+
+    <a href="{{ path('app_modules_new') }} type="button" class="btn btn-secondary"">Create new</a>
+    <br>
+    
+    {% for module in modules %}
+
+        <div class="card bg-light mb-3" style="max-width: 18rem;">
+            <div class="card-header">{{ module.name}}</div>
+            <div class="card-body">
+                <a href="{{ path('app_modules_show', {'id': module.id}) }} type="button" class="btn btn-secondary" ">show</a>
+                <a href="{{ path('app_modules_edit', {'id': module.id}) }} type="button" class="btn btn-secondary"">edit</a> 
+            </div>
+            </div>
+
         {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
+            <p colspan="3" class="font-italic">no records found</p>
         {% endfor %}
-        </tbody>
-    </table>
 
-    <a href="{{ path('app_modules_new') }}">Create new</a>
+    
 {% endblock %}
