make the show option in modules index show the notes related affected to that modles

--- a/symfony_project/templates/modules/index.html.twig
+++ b/symfony_project/templates/modules/index.html.twig
@@ -17,7 +17,7 @@
         <div class="card bg-light mb-3" style="max-width: 18rem;">
             <div class="card-header">{{ module.name}}</div>
             <div class="card-body">
-                <a href="{{ path('app_modules_show', {'id': module.id}) }}" class="btn btn-secondary">show</a>
+                <a href="{{ path('app_notes_module', {'id': module.id}) }}" class="btn btn-secondary">show</a>
                 <a href="{{ path('app_modules_edit', {'id': module.id}) }}" class="btn btn-secondary">edit</a> 
             </div>
             </div>
