--- a/symfony_project/templates/base.html.twig
+++ b/symfony_project/templates/base.html.twig
@@ -18,7 +18,7 @@
     <body>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Note Taker</a>
+    <a class="navbar-brand" href={{ path('home_page') }}>Note Taker</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto ">
