add a note without the need of specifying the module and then when saving return back to same list

--- a/symfony_project/templates/notes/index.html.twig
+++ b/symfony_project/templates/notes/index.html.twig
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_notes_new') }}">Create new</a>
+    <a href="{{ path('app_notes_new', {'id' : module.id}) }}">Create new</a>
 {% endblock %}
