--- a/symfony_project/templates/modules/edit.html.twig
+++ b/symfony_project/templates/modules/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Module{% endblock %}
+{% block title %}Edit module{% endblock %}
 
 {% block body %}
-    <h1>Edit Module : </h1>
+    <h1>Edit module : </h1>
     
     {{ include('modules/_form.html.twig', {'button_label': 'Update'}) }}
 
