--- a/symfony_project/templates/modules/new.html.twig
+++ b/symfony_project/templates/modules/new.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create Module{% endblock %}
+{% block title %}Create module{% endblock %}
 
 {% block body %}
 
-    <h1>Create new Module :</h1>
+    <h1>Create new module :</h1>
 
     {{ include('modules/_form.html.twig') }}
     
