--- a/symfony_project/templates/notes/edit.html.twig
+++ b/symfony_project/templates/notes/edit.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Notes{% endblock %}
+{% block title %}Edit note{% endblock %}
 
 {% block body %}
-    <h1>Edit Notes</h1>
+    <h1>Edit note :</h1>
 
     {{ include('notes/_form.html.twig', {'button_label': 'Update'}) }}
 
-
+    <br>
     {{ include('notes/_delete_form.html.twig') }}
+    
 {% endblock %}
