--- a/symfony_project/templates/notes/new.html.twig
+++ b/symfony_project/templates/notes/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Notes{% endblock %}
 
 {% block body %}
-    <h1>Create new Notes</h1>
+    <h1>Create new note</h1>
 
     {{ include('notes/_form.html.twig') }}
 
