--- a/symfony_project/templates/notes/index.html.twig
+++ b/symfony_project/templates/notes/index.html.twig
@@ -37,4 +37,7 @@
     </div>
     </div>
 
+    <hr>
+    <br>
+    <a href="{{ path('app_modules_index') }}" class="btn btn-secondary">Back to modules list</a>
 {% endblock %}
