add reset password with mailer

--- a/symfony_project/templates/login/index.html.twig
+++ b/symfony_project/templates/login/index.html.twig
@@ -17,6 +17,7 @@
         <input type="password" id="password" name="_password" class="form-control" placeholder="Enter password">
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
+    <a href={{ path('app_forgot_password_request') }} class="btn btn-secondary">Reset</a>
     </form>
-
+    
 {% endblock %}
