form notes fixes

--- a/symfony_project/templates/notes/_form.html.twig
+++ b/symfony_project/templates/notes/_form.html.twig
@@ -2,7 +2,8 @@
 
     {{ form_row(form.content, {
                     label: 'Content : ', 
-                    'attr': {'class': 'form-control'}},
+                    'attr': {'class': 'form-control'},
+                    'attr': {'style': 'height: 250px; width: 100%'}},
                     ) }}
 
     <br>
