--- a/symfony_project/templates/reset_password/request.html.twig
+++ b/symfony_project/templates/reset_password/request.html.twig
@@ -6,17 +6,24 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+
+    <div class="mx-auto" style="width: 500px; margin-top: 160px"> 
+    <h3>Reset your password</h3>
 
     {{ form_start(requestForm) }}
-        {{ form_row(requestForm.username) }}
+        {{ form_row(requestForm.username, {
+                    label: 'Email : ', 
+                    'attr': {'class': 'form-control'}},
+                    ) }}
+        <hr>
         <div>
             <small>
                 Enter your email address and we will send you a
                 link to reset your password.
             </small>
         </div>
-
+        <hr>
         <button class="btn btn-primary">Send password reset email</button>
     {{ form_end(requestForm) }}
+    </div>
 {% endblock %}
